--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-mocha-reporter": "^2.2.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "lodash": "^4.17.2",
     "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "node-uuid": "^1.4.7",
