--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "react-boilerplate",
+  "name": "boilerplate",
   "version": "1.0.0",
-  "description": "Simple React app",
+  "description": "Simple react app",
   "main": "index.js",
   "scripts": {
     "test": "karma start",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Andrew Mead",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
-    "express": "^4.14.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "axios": "^0.9.1",
+    "express": "^4.13.4",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.26.1",
-    "expect": "^1.20.2",
-    "foundation-sites": "^6.2.4",
-    "jquery": "^3.1.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "expect": "^1.14.0",
+    "foundation-sites": "6.2.0",
+    "jquery": "^2.2.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "lodash": "^4.17.2",
-    "mocha": "^3.2.0",
-    "moment": "^2.17.1",
-    "node-sass": "^3.13.0",
-    "node-uuid": "^1.4.7",
-    "react-addons-test-utils": "^15.4.1",
-    "sass-loader": "^4.0.2",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
+    "redux": "^3.3.1",
+    "sass-loader": "^3.1.2",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
   }
 }
